--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "commit": "git-cz",
     "release": "np --message=\"chore(release): %s\"",
     "version": "npm run build",
-    "sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json null"
+    "sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json japa/api-client"
   },
   "keywords": [
     "playwright",
@@ -31,9 +31,11 @@
   "devDependencies": {
     "@adonisjs/mrm-preset": "^5.0.3",
     "@adonisjs/require-ts": "^2.0.10",
+    "@japa/assert": "^1.3.0",
     "@japa/runner": "^2.0.3",
     "@japa/spec-reporter": "^1.1.10",
     "@types/node": "^17.0.21",
+    "cheerio": "^1.0.0-rc.10",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "del-cli": "^4.0.1",
