--- a/package.json
+++ b/package.json
@@ -119,6 +119,9 @@
     "set-cookie-parser": "^2.5.1",
     "superagent": "^8.0.0"
   },
+  "peerDependencies": {
+    "@japa/runner": "^2.1.1"
+  },
   "directories": {
     "test": "tests"
   },
