--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "@japa/assert": "^1.3.7",
     "@japa/runner": "^2.2.3",
     "@japa/spec-reporter": "^1.3.2",
+    "@types/cookie": "^0.5.1",
     "@types/node": "^18.13.0",
+    "@types/set-cookie-parser": "^2.4.2",
     "cheerio": "^1.0.0-rc.10",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
