--- a/package.json
+++ b/package.json
@@ -1,32 +1,82 @@
 {
   "name": "@japa/api-client",
-  "version": "1.4.4",
   "description": "Browser and API testing client for Japa. Built on top of Playwright",
-  "main": "build/index.js",
+  "version": "1.4.4",
+  "engines": {
+    "node": ">=18.16.0"
+  },
+  "main": "./build/index.js",
+  "type": "module",
   "files": [
+    "index.ts",
+    "src",
     "build/src",
     "build/index.d.ts",
-    "build/index.js"
+    "build/index.js",
+    "build/index.d.ts.map"
   ],
   "exports": {
-    ".": "./build/index.js"
+    ".": "./build/index.js",
+    "./types": "./build/src/types.js"
   },
-  "types": "./build/index.d.ts",
   "scripts": {
-    "mrm": "mrm --preset=@adonisjs/mrm-preset",
-    "pretest": "npm run lint",
-    "japa:test": "node -r @adonisjs/require-ts/build/register bin/test.ts",
-    "test": "npm run japa:test",
-    "clean": "del build",
+    "pretest": "npm run lint && npm run typecheck",
+    "test": "c8 npm run quick:test",
+    "clean": "del-cli build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile",
-    "prepublishOnly": "npm run build",
-    "lint": "eslint . --ext=.ts",
-    "format": "prettier --write .",
-    "commit": "git-cz",
     "release": "np --message=\"chore(release): %s\"",
     "version": "npm run build",
-    "sync-labels": "github-label-sync --labels ./node_modules/@adonisjs/mrm-preset/gh-labels.json japa/api-client"
+    "prepublishOnly": "npm run build",
+    "lint": "eslint . --ext=.ts",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write .",
+    "quick:test": "node --loader ts-node/esm bin/test.ts",
+    "sync-labels": "github-label-sync --labels .github/labels.json japa/file-system"
+  },
+  "devDependencies": {
+    "@adonisjs/eslint-config": "^1.1.6",
+    "@adonisjs/prettier-config": "^1.1.6",
+    "@adonisjs/tsconfig": "^1.1.6",
+    "@commitlint/cli": "^17.6.6",
+    "@commitlint/config-conventional": "^17.6.6",
+    "@japa/assert": "^2.0.0-1",
+    "@japa/runner": "^3.0.0-1",
+    "@swc/core": "^1.3.67",
+    "@types/cookie": "^0.5.1",
+    "@types/node": "^18.14.0",
+    "@types/set-cookie-parser": "^2.4.2",
+    "c8": "^8.0.0",
+    "cheerio": "^1.0.0-rc.12",
+    "del-cli": "^5.0.0",
+    "eslint": "^8.43.0",
+    "github-label-sync": "^2.3.1",
+    "husky": "^8.0.3",
+    "np": "^8.0.4",
+    "prettier": "^2.8.8",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
+  },
+  "dependencies": {
+    "@poppinss/hooks": "^7.1.1-4",
+    "@types/superagent": "^4.1.16",
+    "cookie": "^0.5.0",
+    "@poppinss/macroable": "^1.0.0-7",
+    "set-cookie-parser": "^2.6.0",
+    "superagent": "^8.0.9"
+  },
+  "peerDependencies": {
+    "@japa/runner": "^3.0.0-1"
+  },
+  "author": "virk,japa",
+  "license": "MIT",
+  "homepage": "https://github.com/japa/api-client#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/japa/api-client.git"
+  },
+  "bugs": {
+    "url": "https://github.com/japa/api-client/issues"
   },
   "keywords": [
     "playwright",
@@ -35,108 +85,35 @@
     "e2e",
     "api-tests"
   ],
-  "author": "virk,japa",
-  "license": "MIT",
-  "devDependencies": {
-    "@adonisjs/mrm-preset": "^5.0.3",
-    "@adonisjs/require-ts": "^2.0.13",
-    "@japa/assert": "^1.4.1",
-    "@japa/runner": "^2.5.0",
-    "@japa/spec-reporter": "^1.3.3",
-    "@types/cookie": "^0.5.1",
-    "@types/node": "^18.14.0",
-    "@types/set-cookie-parser": "^2.4.2",
-    "cheerio": "^1.0.0-rc.10",
-    "commitizen": "^4.3.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "del-cli": "^5.0.0",
-    "eslint": "^8.34.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-adonis": "^2.1.1",
-    "eslint-plugin-prettier": "^4.2.1",
-    "github-label-sync": "^2.2.0",
-    "husky": "^8.0.3",
-    "mrm": "^4.1.13",
-    "np": "^7.6.3",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
-  },
-  "mrmConfig": {
-    "core": false,
-    "license": "MIT",
-    "services": [
-      "github-actions"
-    ],
-    "minNodeVersion": "16.13.1",
-    "probotApps": [
-      "stale",
-      "lock"
-    ],
-    "runGhActionsOnWindows": true
-  },
   "eslintConfig": {
+    "extends": "@adonisjs/eslint-config/package"
+  },
+  "prettier": "@adonisjs/prettier-config",
+  "commitlint": {
     "extends": [
-      "plugin:adonis/typescriptPackage",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "endOfLine": "auto"
-        }
-      ]
-    }
+      "@commitlint/config-conventional"
+    ]
   },
-  "eslintIgnore": [
-    "build"
-  ],
-  "prettier": {
-    "trailingComma": "es5",
-    "semi": false,
-    "singleQuote": true,
-    "useTabs": false,
-    "quoteProps": "consistent",
-    "bracketSpacing": true,
-    "arrowParens": "always",
-    "printWidth": 100
-  },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
+  "publishConfig": {
+    "access": "public",
+    "tag": "next"
   },
   "np": {
-    "contents": ".",
+    "message": "chore(release): %s",
+    "tag": "next",
+    "branch": "main",
     "anyBranch": false
   },
-  "dependencies": {
-    "@poppinss/hooks": "^6.0.2-0",
-    "@types/superagent": "^4.1.16",
-    "cookie": "^0.5.0",
-    "macroable": "^7.0.2",
-    "set-cookie-parser": "^2.5.1",
-    "superagent": "^8.0.9"
-  },
-  "peerDependencies": {
-    "@japa/runner": "^2.2.3"
+  "c8": {
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "tests/**"
+    ]
   },
   "directories": {
     "test": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/japa/api-client.git"
-  },
-  "bugs": {
-    "url": "https://github.com/japa/api-client/issues"
-  },
-  "homepage": "https://github.com/japa/api-client#readme",
-  "publishConfig": {
-    "access": "public",
-    "tag": "latest"
   }
 }
