--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@japa/api-client",
   "description": "Browser and API testing client for Japa. Built on top of Playwright",
-  "version": "1.4.4",
+  "version": "2.0.0-0",
   "engines": {
     "node": ">=18.16.0"
   },
