chore: do not publish source files

--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
   "main": "./build/index.js",
   "type": "module",
   "files": [
-    "index.ts",
-    "src",
     "build/src",
     "build/index.d.ts",
-    "build/index.js",
-    "build/index.d.ts.map"
+    "build/index.js"
   ],
   "exports": {
     ".": "./build/index.js",
