--- a/package.json
+++ b/package.json
@@ -32,38 +32,44 @@
     "sync-labels": "github-label-sync --labels .github/labels.json japa/file-system"
   },
   "devDependencies": {
-    "@adonisjs/eslint-config": "^1.1.6",
-    "@adonisjs/prettier-config": "^1.1.6",
-    "@adonisjs/tsconfig": "^1.1.6",
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
-    "@japa/assert": "^2.0.0-1",
-    "@japa/runner": "^3.0.0-1",
-    "@swc/core": "^1.3.67",
-    "@types/cookie": "^0.5.1",
-    "@types/node": "^20.3.3",
-    "@types/set-cookie-parser": "^2.4.2",
-    "c8": "^8.0.0",
+    "@adonisjs/eslint-config": "^1.1.8",
+    "@adonisjs/prettier-config": "^1.1.8",
+    "@adonisjs/tsconfig": "^1.1.8",
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
+    "@japa/assert": "^2.0.0-2",
+    "@japa/runner": "^3.0.0-8",
+    "@swc/core": "1.3.82",
+    "@types/cookie": "^0.5.2",
+    "@types/node": "^20.6.5",
+    "@types/set-cookie-parser": "^2.4.3",
+    "c8": "^8.0.1",
     "cheerio": "^1.0.0-rc.12",
-    "del-cli": "^5.0.0",
-    "eslint": "^8.43.0",
+    "del-cli": "^5.1.0",
+    "eslint": "^8.50.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
-    "prettier": "^2.8.8",
+    "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@poppinss/hooks": "^7.1.1-4",
-    "@poppinss/macroable": "^1.0.0-7",
+    "@poppinss/hooks": "^7.1.1-5",
+    "@poppinss/macroable": "^1.0.0-8",
     "@types/superagent": "^4.1.16",
     "cookie": "^0.5.0",
     "set-cookie-parser": "^2.6.0",
-    "superagent": "^8.0.9"
+    "superagent": "^8.1.2"
   },
   "peerDependencies": {
-    "@japa/runner": "^3.0.0-1"
+    "@japa/assert": "^2.0.0-2",
+    "@japa/runner": "^3.0.0-8"
+  },
+  "peerDependenciesMeta": {
+    "@japa/assert": {
+      "optional": true
+    }
   },
   "author": "virk,japa",
   "license": "MIT",
