--- a/package.json
+++ b/package.json
@@ -35,18 +35,18 @@
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
     "@adonisjs/tsconfig": "^1.1.8",
-    "@commitlint/cli": "^17.7.1",
+    "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
-    "@japa/assert": "^2.0.0-2",
-    "@japa/runner": "^3.0.0-8",
+    "@japa/assert": "^2.0.0",
+    "@japa/runner": "^3.0.0",
     "@swc/core": "1.3.82",
     "@types/cookie": "^0.5.2",
-    "@types/node": "^20.6.5",
-    "@types/set-cookie-parser": "^2.4.3",
+    "@types/node": "^20.8.3",
+    "@types/set-cookie-parser": "^2.4.4",
     "c8": "^8.0.1",
     "cheerio": "^1.0.0-rc.12",
     "del-cli": "^5.1.0",
-    "eslint": "^8.50.0",
+    "eslint": "^8.51.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
@@ -57,14 +57,14 @@
   "dependencies": {
     "@poppinss/hooks": "^7.1.1-5",
     "@poppinss/macroable": "^1.0.0-8",
-    "@types/superagent": "^4.1.16",
+    "@types/superagent": "^4.1.19",
     "cookie": "^0.5.0",
     "set-cookie-parser": "^2.6.0",
     "superagent": "^8.1.2"
   },
   "peerDependencies": {
-    "@japa/assert": "^2.0.0-2",
-    "@japa/runner": "^3.0.0-8"
+    "@japa/assert": "^2.0.0",
+    "@japa/runner": "^3.0.0"
   },
   "peerDependenciesMeta": {
     "@japa/assert": {
