--- a/package.json
+++ b/package.json
@@ -35,18 +35,18 @@
     "@adonisjs/eslint-config": "^1.1.8",
     "@adonisjs/prettier-config": "^1.1.8",
     "@adonisjs/tsconfig": "^1.1.8",
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@japa/assert": "^2.0.0",
-    "@japa/runner": "^3.0.0",
-    "@swc/core": "1.3.82",
-    "@types/cookie": "^0.5.2",
-    "@types/node": "^20.8.3",
-    "@types/set-cookie-parser": "^2.4.4",
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
+    "@japa/assert": "^2.0.1",
+    "@japa/runner": "^3.0.5",
+    "@swc/core": "^1.3.96",
+    "@types/cookie": "^0.5.3",
+    "@types/node": "^20.8.10",
+    "@types/set-cookie-parser": "^2.4.5",
     "c8": "^8.0.1",
     "cheerio": "^1.0.0-rc.12",
     "del-cli": "^5.1.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.53.0",
     "github-label-sync": "^2.3.1",
     "husky": "^8.0.3",
     "np": "^8.0.4",
@@ -55,9 +55,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@poppinss/hooks": "^7.1.1-5",
-    "@poppinss/macroable": "^1.0.0-8",
-    "@types/superagent": "^4.1.19",
+    "@poppinss/hooks": "^7.2.1",
+    "@poppinss/macroable": "^1.0.0",
+    "@types/superagent": "^4.1.20",
     "cookie": "^0.5.0",
     "set-cookie-parser": "^2.6.0",
     "superagent": "^8.1.2"
