--- a/package.json
+++ b/package.json
@@ -34,40 +34,40 @@
     "sync-labels": "github-label-sync --labels .github/labels.json japa/api-client"
   },
   "devDependencies": {
-    "@adonisjs/eslint-config": "^1.2.0",
-    "@adonisjs/prettier-config": "^1.2.0",
-    "@adonisjs/tsconfig": "^1.2.0",
-    "@commitlint/cli": "^18.4.3",
-    "@commitlint/config-conventional": "^18.4.3",
-    "@japa/assert": "^2.1.0",
-    "@japa/runner": "^3.1.1",
-    "@swc/core": "^1.3.100",
+    "@adonisjs/eslint-config": "^1.3.0",
+    "@adonisjs/prettier-config": "^1.3.0",
+    "@adonisjs/tsconfig": "^1.3.0",
+    "@commitlint/cli": "^19.2.1",
+    "@commitlint/config-conventional": "^19.1.0",
+    "@japa/assert": "^3.0.0",
+    "@japa/runner": "^3.1.2",
+    "@swc/core": "^1.4.11",
     "@types/cookie": "^0.6.0",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.12.2",
     "@types/set-cookie-parser": "^2.4.7",
-    "c8": "^8.0.1",
+    "c8": "^9.1.0",
     "cheerio": "^1.0.0-rc.12",
     "del-cli": "^5.1.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "github-label-sync": "^2.3.1",
-    "husky": "^8.0.3",
-    "np": "^9.2.0",
-    "prettier": "^3.1.1",
+    "husky": "^9.0.11",
+    "np": "^10.0.2",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "tsup": "^8.0.1",
-    "typescript": "^5.3.3"
+    "tsup": "^8.0.2",
+    "typescript": "^5.4.3"
   },
   "dependencies": {
-    "@poppinss/hooks": "^7.2.2",
-    "@poppinss/macroable": "^1.0.1",
-    "@types/superagent": "^4.1.24",
+    "@poppinss/hooks": "^7.2.3",
+    "@poppinss/macroable": "^1.0.2",
+    "@types/superagent": "^8.1.6",
     "cookie": "^0.6.0",
     "set-cookie-parser": "^2.6.0",
     "superagent": "^8.1.2"
   },
   "peerDependencies": {
-    "@japa/assert": "^2.0.0",
-    "@japa/runner": "^3.0.0"
+    "@japa/assert": "^2.0.0 || ^3.0.0",
+    "@japa/runner": "^3.1.2"
   },
   "peerDependenciesMeta": {
     "@japa/assert": {
