--- a/package.json
+++ b/package.json
@@ -35,34 +35,33 @@
   },
   "devDependencies": {
     "@adonisjs/eslint-config": "^1.3.0",
-    "@adonisjs/prettier-config": "^1.3.0",
-    "@adonisjs/tsconfig": "^1.3.0",
-    "@commitlint/cli": "^19.2.1",
-    "@commitlint/config-conventional": "^19.1.0",
+    "@adonisjs/prettier-config": "^1.4.0",
+    "@adonisjs/tsconfig": "^1.4.0",
+    "@commitlint/cli": "^19.6.0",
+    "@commitlint/config-conventional": "^19.6.0",
     "@japa/assert": "^3.0.0",
-    "@japa/runner": "^3.1.2",
-    "@swc/core": "^1.4.11",
-    "@types/cookie": "^0.6.0",
-    "@types/node": "^20.12.2",
-    "@types/set-cookie-parser": "^2.4.7",
-    "c8": "^9.1.0",
-    "cheerio": "^1.0.0-rc.12",
-    "del-cli": "^5.1.0",
+    "@japa/runner": "^3.1.4",
+    "@swc/core": "^1.9.2",
+    "@types/node": "^22.9.1",
+    "@types/set-cookie-parser": "^2.4.10",
+    "c8": "^10.1.2",
+    "cheerio": "^1.0.0",
+    "del-cli": "^6.0.0",
     "eslint": "^8.57.0",
     "github-label-sync": "^2.3.1",
-    "husky": "^9.0.11",
-    "np": "^10.0.2",
-    "prettier": "^3.2.5",
+    "husky": "^9.1.7",
+    "np": "^10.0.7",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
-    "tsup": "^8.0.2",
-    "typescript": "^5.4.3"
+    "tsup": "^8.3.5",
+    "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@poppinss/hooks": "^7.2.3",
-    "@poppinss/macroable": "^1.0.2",
-    "@types/superagent": "^8.1.6",
-    "cookie": "^0.6.0",
-    "set-cookie-parser": "^2.6.0",
+    "@poppinss/hooks": "^7.2.4",
+    "@poppinss/macroable": "^1.0.3",
+    "@types/superagent": "^8.1.9",
+    "cookie": "^1.0.1",
+    "set-cookie-parser": "^2.7.1",
     "superagent": "^8.1.2"
   },
   "peerDependencies": {
